Fix search bar stretching

--- a/css/resize-handle.css
+++ b/css/resize-handle.css
@@ -1,6 +1,6 @@
 #resize-handle {
     position: absolute;
-    width: 5px;
+    width: 8px;
     height: 100%;
     background-color: transparent;
     cursor: ew-resize;
